--- a/client/src/scss/_definitions.scss
+++ b/client/src/scss/_definitions.scss
@@ -15,6 +15,8 @@ $grey70: #383C45;
 $grey80: #22262E;
 $black: #151A24;
 
+$error-color: #CC2222;
+
 $toolbar-background-color: $grey70;
 $toolbar-color: $grey10;
 
@@ -34,6 +36,8 @@ $dialog-wrapper-color: $grey40;
 
 $system-error-background: #ffdb4a;
 $system-error-color: $black;
+
+$dialog-error-color: $error-color;
 
 $context-banner-background-color: #e8f2fd;
 $context-banner-color: $grey80;
